...
                navigation?.let { action ->
                    WarmPageToolbarIcon(
                        action.icon,
                        action.label,
                        true,
                        action.onClick,
                        Modifier.testTag("warm-page-navigation"),
                    )
                }
            }
            val actionsContent: @Composable RowScope.() -> Unit = {
                WarmPageTopBarActions(actions)
                actionContent()
...
